--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,8 @@
 
 html {
   background-color: #363B4D;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 body {
@@ -13,5 +15,5 @@ body {
   margin-right: auto;
   margin-top: 22px;
   max-width: 900px;
-  padding: 10px;
+  padding: 20px;
 }
