Add styles and comments

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -2,6 +2,19 @@ header {
   text-align: center;
 }
 
+h1 a,
+h1 a:visited {
+  color: #D4625E;
+  text-decoration-color: transparent;
+  -webkit-text-decoration-color: transparent;
+}
+
+h1 a:hover,
+h1 a:focus {
+  text-decoration-color: #D4625E;
+  -webkit-text-decoration-color: #D4625E;
+}
+
 main {
   margin-bottom: 0;
   margin-left: auto;
