--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 * {
   box-sizing: border-box;
+  font-family: 'Roboto Slab', Palatino, serif;
 }
 
 html {
@@ -9,11 +10,58 @@ html {
 }
 
 body {
-  background-color: lightgray;
+  background-color: #292d3c;
   border-radius: 4px;
+  box-shadow: 0px 2px 8px rgb(30, 30, 30);
+  color: #E6E6E6;
   margin-left: auto;
   margin-right: auto;
   margin-top: 22px;
   max-width: 900px;
   padding: 20px;
+}
+
+h1 {
+  color: #D4625E;
+}
+
+a,
+a:visited {
+  color: #E6E6E6;
+  cursor: pointer;
+  padding-bottom: 3px;
+  position: relative;
+  text-decoration-color: #D4625E;
+  -webkit-text-decoration-color: #D4625E;
+  transition: all 0.25s;
+  -webkit-transition: all 0.25s;
+}
+
+a:hover,
+a:focus {
+  color: #D4625E;
+  transition: all 0.25s;
+  -webkit-transition: all 0.25s;
+}
+
+button {
+  background: none;
+  border: 1px solid #DB6160;
+  border-radius: 4px;
+  color: #E6E6E6;
+  cursor: pointer;
+  font-size: 1em;
+  transition: all 0.25s;
+  -webkit-transition: all 0.25s;
+}
+
+button:hover,
+button:focus {
+  background: #DB6160;
+  transition: all 0.25s;
+  -webkit-transition: all 0.25s;
+}
+
+.red {
+  color: #DB6160;
 }
